# cpp_moleculair_weight

./: .gitignore  CMakeLists.txt  README.md
include/: periodic_table.h
src/: main.cpp  periodic_table.cpp
tests/: test_periodic_table.cpp
